force-app/main/default/objects/leaseworks__Transaction_Terms__c/leaseworks__Transaction_Terms__c.object-meta.xml
<CustomObject>
    <description>[MODULE: NA]
[LOAD: No]
[PREREQUISITES: NA]
[REPLACEMENT OBJECT API: NA]
[COMMENTS: NA]</description>
    <label>Transaction Terms</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Transaction Terms</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>