force-app/main/default/objects/leaseworks__Transaction_Terms__c/fields/leaseworks__Additional_Maintenance_Works__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Additional_Maintenance_Works__c</fullName>
    <label>Z_unusedAdditional Maintenance Works</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>