force-app/main/default/objects/leaseworks__Transaction_Terms__c/fields/leaseworks__Early_termination_Date__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Early_termination_Date__c</fullName>
    <label>Z_Unused_Early termination Date</label>
    <type>Date</type>
</CustomField>