force-app/main/default/objects/leaseworks__Transaction_Terms__c/fields/leaseworks__Early_Termination_Option__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Early_Termination_Option__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Z_Unused_Early Termination Option</label>
    <type>Checkbox</type>
</CustomField>