force-app/main/default/objects/leaseworks__Transaction_Terms__c/fields/leaseworks__Initial_MRs_Pot__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Initial_MRs_Pot__c</fullName>
    <label>Z_Unused_Initial MRs Pot</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>