force-app/main/default/objects/leaseworks__Transaction_Terms__c/fields/leaseworks__Insurance_Hull_Value__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Insurance_Hull_Value__c</fullName>
    <label>Z_Unused_Insurance Hull Value</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>