force-app/main/default/objects/leaseworks__Transaction_Terms__c/fields/leaseworks__Is_Max_Bid__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Is_Max_Bid__c</fullName>
    <formula>AND( leaseworks__Aircraft_In_Transaction__r.leaseworks__Max_Bid__c ==  leaseworks__Bid_M__c, !isBlank(leaseworks__Aircraft_In_Transaction__r.leaseworks__Max_Bid__c))</formula>
    <inlineHelpText>If this is Max Bid?</inlineHelpText>
    <label>Is Max Bid?</label>
    <type>Checkbox</type>
</CustomField>