force-app/main/default/objects/leaseworks__Transaction_Terms__c/fields/leaseworks__Preferred_Prospect__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Preferred_Prospect__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Preferred Prospect</label>
    <type>Checkbox</type>
</CustomField>