force-app/main/default/objects/leaseworks__Transaction_Terms__c/fields/leaseworks__Purchase_Option_balloon__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Purchase_Option_balloon__c</fullName>
    <label>Z_Unused_Purchase Option / balloon</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>