force-app/main/default/objects/leaseworks__Transaction_Terms__c/fields/leaseworks__Transaction_Date__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Transaction_Date__c</fullName>
    <label>Z_Unused_Transaction Date</label>
    <type>Date</type>
</CustomField>