force-app/main/default/objects/leaseworks__Transaction_Terms__c/fields/leaseworks__Transaction_Prospect__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Transaction_Prospect__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Transaction Prospect</label>
    <referenceTo>leaseworks__Transaction_Proposal__c</referenceTo>
    <relationshipLabel>Transaction Terms</relationshipLabel>
    <relationshipName>Transaction_Terms</relationshipName>
    <type>Lookup</type>
</CustomField>